
SET(RSC_CMAKE_TOOLCHAINS_PATH "${RSC_CMAKE_MODULE_PATH}/../Toolchains")

IF(INSTALL_TOOLCHAINS)
MESSAGE(STATUS "Installing CMake toolchain files to: ${RSC_CMAKE_TOOLCHAINS_PATH}")

#INSTALL(FILES ExtractTBBVersion.cpp.in
#              CheckInitMethod.cmake
#        DESTINATION ${CMAKE_MODULE_PATH})

ENDIF(INSTALL_TOOLCHAINS)
